# regulatory_rag_system

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
agents/: rag_agent.py
app/: cli.py  main.py
app/agents/: rag_agent.py
app/core/: db.py  logger.py
app/ingestion/: ingestion.py
app/routes/: query_routes.py  upload_routes.py
app/schema/: query_response.py
app/services/: query_service.py  upload_service.py
app/tools/: tools.py
app/ui/: api.py  app.py  components.py  constants.py  sidebar.py  styles.py
core/: db.py
