[project]
name = "regulatory-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-postgres>=0.0.17",
    "langsmith>=0.10.6",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
    "uvicorn>=0.51.0",
]
